Adding 3 information about myself

--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
   </script>
 </head>
 <body>
+  <p> My name is Paulina
+    <p> I am originaly from Poland
+      <p> I really want to learn how to code and creat web pages
 </body>
 </html>
